Complete dockerization and orchestration of microservices and frontend